# comsar

./: .gitignore  README.md  setup.cfg
.github/workflows/: wheels.yml
docs/: MANUAL.md
examples/: Feature_Extract_From_Wav.ipynb  PitchTrack_Melody.ipynb  PitchTrack_Note_TonalSystem_Extract.ipynb  PitchTrack_f0_Extract.ipynb  README.md  SOM.ipynb  TimbreTrack_Extract_Features.ipynb  TimbreTrack_SOM.ipynb  TimbreTrack_SimpleExample.ipynb  WaveletRoughness_Example.ipynb
src/comsar/: __init__.py  viz.py
src/comsar/_tracks/: __init__.py
src/comsar/tracks/: __init__.py  _impulse.py  _pitch.py  _rhythm.py  _roughness.py  _timbre.py  utilities.py
