[metadata]
# Distribution name on PyPI. The original name "comsar" is owned by the
# upstream project (ifsm/comsar). This fork is published as "bader-comsar";
# the import name stays "comsar".
name = bader-comsar
version = 0.0.10
description = Computational Music and Sound Archiving
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD-3-Clause
author = Michael Blaß, Rolf Bader
author_email = R_Bader@t-online.de
keywords = comsar, music, analysis, ethnomusicology
project_urls =
	Source code = https://codeberg.org/rbader/comsar
	Bug tracker = https://codeberg.org/rbader/comsar/issues
	Documentation = https://codeberg.org/rbader/comsar

classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Programming Language :: Python :: 3.11
	Programming Language :: Python :: 3.12
	Programming Language :: Python :: 3.13
	Programming Language :: Python :: Implementation :: CPython
	Topic :: Scientific/Engineering
	Topic :: Database
	Topic :: Multimedia :: Sound/Audio :: Analysis
	Intended Audience :: Science/Research
	Intended Audience :: Information Technology
	License :: OSI Approved :: BSD License

[options]
zip_safe = False
package_dir =
	=src
include_package_data = True
packages = find_namespace:
# NOTE: the previous "python_requires >= '3.7'" was invalid cfg syntax and was
# silently ignored. Correct form below.
python_requires = >=3.9
install_requires =
	bader-apollon>=0.1.6
	numpy>=1.23
	pandas
	scipy>=1.6
	matplotlib>=3
	scikit-learn>=1.0

[options.packages.find]
where = src

[options.package_data]
comsar =
	scales.csv
	tracks/schema/*.json
